[package]
name = "mica-exporter"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = "0.9.2"
lambda_runtime = "0.9.1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
mica = { git = "https://github.com/mfauzaan/mica", version = "0.0.1" }
aws-sdk-s3 = "1.15.0"
bytes = "1.5.0"
thiserror = "1.0.57"
aws-config = "1.1.5"
tempfile = "3.10.0"
rayon = "1.9.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
image = { version = "0.24.0", default-features = false, features = ["png"] }

